--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "prepush": "yarn format:check && yarn lint && yarn type-check && jest --changedSince main"
   },
   "peerDependencies": {
-    "@jupiterone/integration-sdk-core": "^8.4.1"
+    "@jupiterone/integration-sdk-core": "^8.4.5"
   },
   "devDependencies": {
-    "@jupiterone/integration-sdk-core": "^8.4.1",
-    "@jupiterone/integration-sdk-dev-tools": "^8.4.1",
-    "@jupiterone/integration-sdk-testing": "^8.4.1"
+    "@jupiterone/integration-sdk-core": "^8.4.5",
+    "@jupiterone/integration-sdk-dev-tools": "^8.4.5",
+    "@jupiterone/integration-sdk-testing": "^8.4.5",
+    "@types/node": "^17.0.8",
+    "@types/got": "^9.6.12"
+  },
+  "dependencies": {
+    "got": "^11.8.2"
   }
 }
