--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@jupiterone/integration-template",
+  "name": "@jupiterone/graph-veracode-v2",
   "version": "0.0.0",
-  "description": "A JupiterOne Integration",
+  "description": "JupiterOne Veracode Integration",
   "license": "MPL-2.0",
   "main": "src/index.js",
   "types": "src/index.d.ts",
