--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jupiterone/graph-veracode-v2",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "JupiterOne Veracode Integration",
   "license": "MPL-2.0",
   "main": "src/index.js",
@@ -36,8 +36,8 @@
     "@jupiterone/integration-sdk-core": "^8.4.5",
     "@jupiterone/integration-sdk-dev-tools": "^8.4.5",
     "@jupiterone/integration-sdk-testing": "^8.4.5",
-    "@types/node": "^17.0.8",
-    "@types/got": "^9.6.12"
+    "@types/got": "^9.6.12",
+    "@types/node": "^17.0.8"
   },
   "dependencies": {
     "got": "^11.8.2"
