--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@jupiterone/graph-veracode",
   "version": "4.1.1",
   "description": "JupiterOne Veracode Integration",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JupiterOne/graph-veracode"
+  },
   "license": "MPL-2.0",
   "main": "src/index.js",
   "types": "src/index.d.ts",
